--- a/styles/general.css
+++ b/styles/general.css
@@ -1,12 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    width: 1920px;
+    width: 100%;
 }
 body {
     background: black;
     font-family: roboto, arial;
-    width: 1920px;
+    width: 100%;
 }
 #header {
     display: flex;
