--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,20 +1,20 @@
 #wrapper {
     position: relative;
     overflow: hidden;
-    border: 20px solid black;
 }
 #carousel {
     width: 100%;
     display: flex;
-    animation: slide 24s infinite;
+    animation: slide 18s infinite;
 }
 .slide {
     width: 100%;
-    /* transition: 2s; */
+    transition: 2s;
 }
 .slide img {
-    width: 1500px;
-    height: 840px;
+    width: 960px;
+    height: 540px;
+    margin: 0 270px;
 }
 @keyframes slide {
     0% {
@@ -42,20 +42,29 @@
         transform: translateX(-300%);
     }
 }
+.background1 {
+    background: rgb(192, 192, 192);
+    padding: 50px;
+}
 #location {
+    border: 20px solid black;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
-    border: 20px solid white;
+    align-items: center;
+    margin: auto;
+    width: 1110px;
+    height: 630px;
 }
 #location iframe {
-    width: 100%;
-    height: 55em;
+    width: 1080px;
+    height: 600px;
 }
 #contactBlock {
     /* background: rgb(204, 204, 204); */
     display: grid;
     justify-content: center;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     padding: 10em 12em;
 }
 .informationBlock {
@@ -64,5 +73,5 @@
     border: 4px solid white;
     text-align: center;
     align-content: center;
-    box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.3);
+    box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.5);
 }
