--- a/styles/general.css
+++ b/styles/general.css
@@ -1,14 +1,16 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
-}
+} */
 body {
     background: black;
     font-family: roboto, arial;
-    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 #header {
     display: flex;
+    align-items: center;
     background: white;
     padding: 1em;
 }
